adding code to create outputdir when starting proxy (for systems without /tmp/ratproxy)